src/test/deca/codegen/invalid/objet/NotIncompatibleClass.deca
// The member of this unary operation is not compatible with this operator
// Description : Utilisation du not avec une type impossible
// Resultat : not ne peut être appliqué à un entier : Erreur ligne 6.

class A{
    boolean y =  !2;
}
